[package]
name = "latexdef"
version = "0.4.2"
authors = ["Rebecca Turner <rbt@sent.as>"]
license = "LPPL-1.3c"
description = "A command-line tool which shows the definitions of LaTeX commands."
repository = "https://github.com/9999years/latexdef"
keywords = ["TeX", "LaTeX"]
categories = ["command-line-utilities", "development-tools"]
edition = "2018"

[dependencies]
clap = "2.33.0"
# nom = "5.0.1"
regex = "1.3.1"
lazy_static = "1.4.0"
quick-error = "1.2.2"
# syntect = "3.3.0"
ansi_term = "0.12.1"

[lib]
name = "latexdef"
path = "src/lib.rs"

[[bin]]
name = "latexdef"
path = "src/main.rs"
